# PyChecksum

./: .gitignore  LICENSE  README.md  pyproject.toml
src/py_checksum/: checksum.py  cli.py
tests/: test___init__.py
